@@ -10,8 +10,9 @@ class InsecureCookiePlugin(object):
 
     implements(IIdentifier)
     
-    def __init__(self, cookie_name):
+    def __init__(self, cookie_name, cookie_path='/'):
         self.cookie_name = cookie_name
+        self.cookie_path = cookie_path
 
     # IIdentifier
     def identify(self, environ):
@@ -35,8 +36,8 @@ class InsecureCookiePlugin(object):
     # IIdentifier
     def forget(self, environ, identity):
         # return a expires Set-Cookie header
-        expired = ('%s=""; Path=/; Expires=Sun, 10-May-1971 11:59:00 GMT' %
-                   self.cookie_name)
+        expired = ('%s=""; Path=%s; Expires=Sun, 10-May-1971 11:59:00 GMT' %
+                   (self.cookie_name, self.cookie_path))
         return [('Set-Cookie', expired)]
     
     # IIdentifier
@@ -48,13 +49,14 @@ class InsecureCookiePlugin(object):
         value = getattr(existing, 'value', None)
         if value != cookie_value:
             # return a Set-Cookie header
-            set_cookie = '%s=%s; Path=/;' % (self.cookie_name, cookie_value)
+            set_cookie = '%s=%s; Path=%s;' % (self.cookie_name, cookie_value,
+                                              self.cookie_path)
             return [('Set-Cookie', set_cookie)]
 
     def __repr__(self):
         return '<%s %s>' % (self.__class__.__name__, id(self))
 
-def make_plugin(cookie_name='repoze.who.plugins.cookie'):
-    plugin = InsecureCookiePlugin(cookie_name)
+def make_plugin(cookie_name='repoze.who.plugins.cookie', cookie_path='/'):
+    plugin = InsecureCookiePlugin(cookie_name, cookie_path)
     return plugin
 
